# forum

./: .env.example  .gitignore  CACHE_SCHEMA.md  README.md  demo-values.yaml  forum-implementation-plan.md  forumcontext.md  pyproject.toml  server.py  startup-values.yaml
.forum_cache/: graph.json
docs/: app.js  index.html  style.css
docs/data/: manifest.json  prioritized.json
docs/data/deepeval/: evidence.json  graph.json  prioritized.json  report.md  verdicts.json
docs/data/fastapi/: evidence.json  graph.json  prioritized.json  report.md  verdicts.json
docs/data/financial-services/: evidence.json  graph.json  metrics.json  prioritized.json  report.md  verdicts.json
docs/data/flask/: evidence.json  graph.json  prioritized.json  report.md  verdicts.json
docs/data/kronos/: evidence.json  graph.json  prioritized.json  report.md  verdicts.json
docs/data/minicpm-v/: evidence.json  graph.json  metrics.json  prioritized.json  report.md  verdicts.json
docs/data/paperasse/: evidence.json  graph.json  metrics.json  prioritized.json  report.md  verdicts.json
docs/data/pentesting/: evidence.json  graph.json  prioritized.json  report.md  verdicts.json
docs/data/praisonai/: evidence.json  graph.json  prioritized.json  verdicts.json
docs/data/redis/: evidence.json  graph.json  prioritized.json  report.md  verdicts.json
docs/data/shadowbroker/: evidence.json  graph.json  prioritized.json  report.md  verdicts.json
docs/tools/: svg_to_graph_json.py
prompts/: blue.md  judge.md  red.md  report.md
src/forum/: __init__.py  _polish.py  cli.py  events.py  types.py
(+62 files in other folders)
