[project]
name = "forum"
version = "0.1.0"
description = "AI architectural audit for Python codebases"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.6",
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "networkx>=3.2",
    "pydeps>=1.12",
    "radon>=6.0",
    "lizard>=1.17",
    "vulture>=2.11",
    "pydriller>=2.6",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
forum = "forum.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forum"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
